ros_packages/log/build_2022-03-02_01-23-10/pid/stderr.log
  File "/opt/ros/dev_ws/src/install/pid/lib/python3.8/site-packages/pid/test.py", line 5
    const int trigPin = 9;
          ^
SyntaxError: invalid syntax

